# manim-mobject-svg

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/manim_mobject_svg/: __init__.py  svg.py
