[tool.poetry]
name = "manim-mobject-svg"
version = "0.4.0"
description = "Create SVG files from VMobject and VGroup"
authors = ["Naveen M K <naveen521kk@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/naveen521kk/manim-mobject-svg"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
manim = ">=0.16.0"
pycairo = "^1"

[tool.poetry.plugins."manim.plugins"]
"manim_plugintemplate" = "manim_plugintemplate"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
