[tool.poetry]
name = "manim-mobject-svg"
version = "0.5.0"
description = "Create SVG files from VMobject and VGroup in Manim"
authors = ["Naveen M K <naveen521kk@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/naveen521kk/manim-mobject-svg"

[tool.poetry.dependencies]
python = ">=3.9"
manim = ">=0.16.0"
pycairo = "^1"

[tool.poetry.plugins."manim.plugins"]
"manim_mobject_svg" = "manim_mobject_svg"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
